test/sema/typeck/generic/type-param-bounds-1.out
error: type `T` does not implement trait `MyTrait`.
--> type-param-bounds-1.dora:3:17
 | trait MyTrait {}
 | class Foo[T: MyTrait]
 | fn bar[T](_arg: Foo[T]) {}
                   ~~~~~~
 | 
1 error found.
