test/sema/typeck/generic/type-param-bounds-1.dora
trait MyTrait {}
class Foo[T: MyTrait]
fn bar[T](_arg: Foo[T]) {}
